--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postcss-responsify",
   "version": "1.0.0",
-  "description": "Easily create responsive classes",
+  "description": "PostCSS plugin to automatically create responsive classes with at-rules",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
